fix: redirect to homepage sections from header links

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,10 +13,10 @@
   </label>
   <nav class="hamburger__menu" id="hamburger-menu">
     <ul class="hamburger__links">
-      <li><a href="#workshops">Workshops</a></li>
-      <li><a href="#courses">Wahlkurse</a></li>
-      <li><a href="#sfw-day">SFW Tag</a></li>
-      <li><a href="#program">Programm</a></li>
+      <li><a href="/#workshops">Workshops</a></li>
+      <li><a href="/#courses">Wahlkurse</a></li>
+      <li><a href="/#sfw-day">SFW Tag</a></li>
+      <li><a href="/#program">Programm</a></li>
     </ul>
   </nav>
 </header>
