closes SFW 12: fix hamburger link underline animation

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -155,17 +155,14 @@ header {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--text-color);
-    transform: scaleX(0);
-    transition: transform 0.2s;
-    transform-origin: left;
+    width: 0;
+    height: 2.5px;
+    background-color: currentColor;
+    transition: width 0.2s ease;
   }
 
   .hamburger__links li:hover:after {
-    transform: scaleX(1);
-    transform-origin: left;
+    width: 100%;
   }
 
   .hamburger__links a {
