--- a/layouts/course/single.html
+++ b/layouts/course/single.html
@@ -11,6 +11,12 @@
     href="{{ $imageViewerCss.RelPermalink }}"
     integrity="{{ $imageViewerCss.Data.Integrity }}"
   />
+  {{- $markdownCss := resources.Get "css/markdown.css" | minify | fingerprint -}}
+  <link
+    rel="stylesheet"
+    href="{{ $markdownCss.RelPermalink }}"
+    integrity="{{ $markdownCss.Data.Integrity }}"
+  />
   <script
     src="https://kit.fontawesome.com/6a1cb3174c.js"
     crossorigin="anonymous"
