--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
         >
       </p>
       <a>Datenschutz</a>
-      <a>Impressum</a>
+      <a href="/imprint">Impressum</a>
     </div>
     <div class="footer__container--socials">
       <a href="https://github.com/plesioo/SFW-Website">
