part of SFW-13: add privacy policy page

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
           >MIT</a
         >
       </p>
-      <a>Datenschutz</a>
+      <a href="/privacy-policy">Datenschutz</a>
       <a href="/imprint">Impressum</a>
     </div>
     <div class="footer__container--socials">
