--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -7,7 +7,8 @@
 /* Headings */
 .markdown__container h1,
 .markdown__container h2,
-.markdown__container h3 {
+.markdown__container h3,
+.markdown__container h4 {
   margin-top: 0.5em;
   margin-bottom: 0.75em;
   font-weight: 600;
@@ -28,6 +29,10 @@
 
 .markdown__container h3 {
   font-size: 1.25rem;
+}
+
+.markdown__container h4 {
+  font-size: 1.125rem;
 }
 
 /* Paragraphs */
@@ -168,7 +173,7 @@
   }
 
   .markdown__container h4 {
-    font-size: 1.125rem;
+    font-size: 1.25rem;
   }
 }
 
@@ -181,7 +186,8 @@
 
   .markdown__container h1,
   .markdown__container h2,
-  .markdown__container h3 {
+  .markdown__container h3,
+  .markdown__container h4 {
     margin-top: 1em;
   }
 
@@ -195,6 +201,10 @@
 
   .markdown__container h3 {
     font-size: 1.75rem;
+  }
+
+  .markdown__container h4 {
+    font-size: 1.375rem;
   }
 
   .markdown__container pre {
