--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,7 +24,10 @@
 
   <p class="footer__text--author">
     Made by
-    <a href="https://github.com/plesioo" class="footer__link underline"
+    <a
+      href="https://github.com/plesioo"
+      class="footer__link underline"
+      target="_blank"
       >Phillip Fleischer</a
     >,
     <br />
