closes SFW-13: comment out Instagram section in home layout

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -177,7 +177,7 @@
         {{ end }}
       </section>
       {{ partial "sponsors.html" . }}
-      <h2 class="home__title">Folge uns auf Instagram:</h2>
+      <!-- <h2 class="home__title">Folge uns auf Instagram:</h2>
       <section class="home__section--insta">
         <script
           src="https://cdn.commoninja.com/sdk/latest/commonninja.js"
@@ -186,7 +186,7 @@
         <div
           class="commonninja_component pid-85aba765-8fae-4ca9-9d33-fa1ae3363392"
         ></div>
-      </section>
+      </section> -->
     </div>
   </main>
 {{ end }}
