feat: comment out sfw-day section

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
     <ul class="hamburger__links">
       <li><a href="/#workshops">Workshops</a></li>
       <li><a href="/#courses">Wahlkurse</a></li>
-      <li><a href="/#sfw-day">SFW Tag</a></li>
+      <!-- <li><a href="/#sfw-day">SFW Tag</a></li> -->
       <li><a href="/#program">Programm</a></li>
     </ul>
   </nav>
